--- a/spring-cloud-feign-consumer-application.properties
+++ b/spring-cloud-feign-consumer-application.properties
@@ -1,10 +1,6 @@
-server:
-  port: 7081
+server.port= 7081
  #eureka.client.healthcheck.enabled=true只能在application.yml中设置。
  #设置bootstrap.yml中的值将导致不良副作用，例如在eureka中注册UNKNOWN状态。
-    healthcheck:
-      enabled: true
+healthcheck.enabled= true
 #eureka.instance.lease-renewal-interval-in-seconds
-management:
-    security:
-      enabled: false
+management.security.enabled= false
